kubernetes/traefik-cert-manager/rancher/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: rancher
  namespace: cattle-system
  annotations: 
    kubernetes.io/ingress.class: traefik-external  
spec:
  entryPoints:
    - websecure # Ensure this matches your Traefik HTTPS entry point
  routes:
    - match: Host(`rancher.kube.bladerose.me`)
      kind: Rule
      services:
        - name: rancher # Name of the Rancher service created by Helm
          port: 443      # Rancher's HTTPS port (self-signed cert)
  # tls:
  #   certResolver: le # Use the Let's Encrypt resolver configured in Traefik
  tls:
    secretName: kube-bladerose-me-tls
